[tool.poetry]
name = "BuoyantUnrealisticModule"
version = "0.1.0"
description = ""
authors = ["m4rk4 <<>>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "*"
flask-cors = "*"
av = "*"
bs4 = "^0"
feedparser = "^6"
install-playwright = "^0"
lxml = "^5"
markdown2 = "^2"
netifaces = [
    {path = "lib/netifaces-0.11.0-cp38-cp38-win_amd64.whl",  markers = "sys_platform == 'win32'"},
    {version = "=0.11.0",  markers = "sys_platform != 'win32'"}
]
Pillow = "*"
pycryptodome = "^3"
pytest-playwright = "^0"
python-dateutil = "^2"
pytz = "*"
requests = {extras = ["socks"], version = "*"}
tldextract = "^5"
# https://github.com/psf/requests/issues/6443
# urllib3 = "^1.26"
urllib3 = "*"
cloudscraper = "*"
staticmap = "^0.5"
pytube = "*"
basencode = "^2"
requests-oauthlib = "^2"
cryptography = "*"
utils = "^1.0.1"
config = "^0.5.1"
playwright = "^1"
image-utils = "^0"
js2py = "*"
curl-cffi = "*"
certifi = "*"
pygal = "*"
duckduckgo-search = "*"
#yt-dlp = {extras = ["default", "curl-cffi"], version = "*"}
yt-dlp = "*"
podcastparser = "^0"
stpyv8 = "*"
herbal = "^0.1.3"
browserforge = {extras = ["all"], version = "^1.1.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
