[tool.poetry]
name = "BuoyantUnrealisticModule"
version = "0.1.0"
description = ""
authors = ["m4rk4 <<>>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "*"
flask-cors = "*"
av = "*"
bs4 = "*"
feedparser = "*"
install-playwright = "*"
lxml = "*"
markdown2 = "*"
netifaces = [
    {path = "lib/netifaces-0.11.0-cp38-cp38-win_amd64.whl",  markers = "sys_platform == 'win32'"},
    {version = "=0.11.0",  markers = "sys_platform != 'win32'"}
]
Pillow = "*"
pycryptodome = "*"
pytest-playwright = "*"
python-dateutil = "*"
pytz = "*"
requests = {extras = ["socks"], version = "*"}
tldextract = "*"
# https://github.com/psf/requests/issues/6443
# urllib3 = "^1.26"
urllib3 = "*"
cloudscraper = "*"
staticmap = "*"
pytube = "*"
basencode = "*"
requests-oauthlib = "*"
cryptography = "*"
utils = "*"
config = "*"
playwright = "*"
image-utils = "*"
js2py = "*"
curl-cffi = "*"
certifi = "*"
pygal = "*"
duckduckgo-search = "*"
#yt-dlp = {extras = ["default", "curl-cffi"], version = "*"}
yt-dlp = "*"
podcastparser = "*"
stpyv8 = "*"
herbal = "*"
browserforge = {extras = ["all"], version = "*"}
pyjwt = "*"
pip-system-certs = "*"
unidecode = "*"
pyotp = "*"
pybatchexecute = "^1.0.0"
g4f = {extras = ["slim"], version = "^0.5.2.2"}
spotifyscraper = "^2.0.20"
ytmusicapi = "*"
bgutil-ytdlp-pot-provider = "*"
chompjs = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
