[tool.poetry]
name = "BuoyantUnrealisticModule"
version = "0.1.0"
description = ""
authors = ["m4rk4 <<>>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "*"
flask-cors = "*"
av = "*"
bs4 = "*"
feedparser = "*"
install-playwright = "*"
lxml = "*"
markdown2 = "*"
netifaces = [
    {path = "lib/netifaces-0.11.0-cp38-cp38-win_amd64.whl",  markers = "sys_platform == 'win32'"},
    {version = "=0.11.0",  markers = "sys_platform != 'win32'"}
]
Pillow = "*"
pycryptodome = "*"
pytest-playwright = "*"
python-dateutil = "*"
pytz = "*"
requests = {extras = ["socks"], version = "*"}
tldextract = "*"
# https://github.com/psf/requests/issues/6443
# urllib3 = "^1.26"
urllib3 = "*"
cloudscraper = "*"
staticmap = "*"
basencode = "*"
requests-oauthlib = "*"
cryptography = "*"
utils = "*"
config = "*"
playwright = "*"
image-utils = "*"
curl-cffi = "*"
certifi = "*"
pygal = "*"
duckduckgo-search = "*"
podcastparser = "*"
browserforge = {extras = ["all"], version = "*"}
pip-system-certs = "*"
unidecode = "*"
pybatchexecute = "*"
g4f = {extras = ["slim"], version = "*"}
spotifyscraper = "*"
ytmusicapi = "*"
asyncio = "*"
rnet = "3.0.0rc21"
pythonmonkey = "*"
yt-dlp = {extras = ["default"], version = "^2025.11.12"}
css-inline = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
